<resources>
    <string name="app_name">Ft_hangouts</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="contact_picture">Contact picture</string>
    <string name="sms">SMS</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
</resources>
